样式调整，完善 入门必看

--- a/SqlSugar/从零开始/入门必看.md
+++ b/SqlSugar/从零开始/入门必看.md
@@ -16,7 +16,7 @@ SqlSugarClient  和 SqlSugarScope
 * db不能跨上下文使用，每次需要new一个新对象
 * 偶发错误难排查，适合有经验的用户
 
-#### 2.1.1 非Asp.NET Core下的完整案例
+#### 2.1.1 静态方法案例
 `创建对象：`
 ```csharp
 public class Sugar
@@ -36,6 +36,7 @@ public class Sugar
             db.Aop.OnLogExecuting = (sql, pars) =>
             {
                 var queryString = new KeyValuePair<string, SugarParameter[]>(sql, pars);
+                //ToSqlExplain 在标题6中有完整代码
                 Console.WriteLine(ToSqlExplain.GetSql(queryString));//输出sql
             };
 
@@ -81,35 +82,110 @@ static void Main(string[] args)
 }
 ```
 
-#### 2.1.2 Asp.NET Core3.0以上的完整案例
+#### 2.1.2 SqlSugar.IOC注入方式案例
+`创建对象：`
+```csharp
+//Program.cs中添加如下代码
+
+SugarIocServices.AddSqlSugar(new IocConfig()
+{
+    //ConfigId="db01"  多租户用到
+    ConnectionString = "server=127.0.0.1;Database=ToDoDB;Uid=root;Pwd=root; AllowLoadLocalInfile=true;",
+    DbType = IocDbType.MySql,
+    IsAutoCloseConnection = true//自动释放
+}); //多个库就传List<IocConfig>
+
+//配置参数
+SugarIocServices.ConfigurationSugar(db =>
+{
+    db.Aop.OnLogExecuting = (sql, p) =>
+    {
+        Console.WriteLine(sql);
+    };
+    //设置更多连接参数
+    //db.CurrentConnectionConfig.XXXX=XXXX
+    //db.CurrentConnectionConfig.MoreSettings=new ConnMoreSettings(){}
+    //二级缓存设置
+    //db.CurrentConnectionConfig.ConfigureExternalServices = new ConfigureExternalServices()
+    //{
+    // DataInfoCacheService = myCache //配置我们创建的缓存类
+    //}
+    //读写分离设置
+    //laveConnectionConfigs = new List<SlaveConnectionConfig>(){...}
+
+    /*多租户注意*/
+    //单库是db.CurrentConnectionConfig 
+    //多租户需要db.GetConnection(configId).CurrentConnectionConfig 
+});
+```
+
+
+`调用对象：`
+
+```csharp
+public class TestController : ControllerBase
+{
+    private static readonly SqlSugarClient db = DbScoped.Sugar;
+    
+    public TestController()
+    {
+    }
+    
+    public JsonResult Test()
+    {
+        var cs = db.Queryable<Student>().ToList();
+        return new JsonResult(cs);
+    }
+}
+```
+
+
+#### 2.1.3 .NET IOC注入方式案例
+`注意：SqlSugarClient用 AddScoped  每次请求一个实例`
+
 `创建对象：`
 ```csharp
 public static class SqlsugarSetup
     {
-        public static void AddSqlsugarSetup(this IServiceCollection services, string dbName = "DefaultConnection")
+        public static void AddSqlsugarSetup(this IServiceCollection services)
         {
             SqlSugarClient db = new SqlSugarClient(new ConnectionConfig()
             {
-                ConnectionString = Config.ConnectionString,
+                ConnectionString = "server=127.0.0.1;Database=ToDoDB;Uid=root;Pwd=root; AllowLoadLocalInfile=true;",
                 DbType = DbType.MySql,
-                IsAutoCloseConnection = true
+                IsAutoCloseConnection = true,
             });
 
-            //调试SQL事件，可以删掉
+            //每次Sql执行前事件
             db.Aop.OnLogExecuting = (sql, pars) =>
             {
-                //Console.WriteLine(sql);//输出sql，查看执行sql
-                //Console.WriteLine(string.Join(",", pars?.Select(it => it.ParameterName + ":" + it.Value)));//参数
-
                 var queryString = new KeyValuePair<string, SugarParameter[]>(sql, pars);
+                //ToSqlExplain 在标题6中有完整代码
                 Console.WriteLine(ToSqlExplain.GetSql(queryString));//输出sql
             };
 
-            //没有这句话 builder.Build(); 会报错
-            services.AddSingleton<ISqlSugarClient>(db);
+            //每次Sql执行后事件
+            db.Aop.OnLogExecuted = (sql, pars) =>
+            {
+                //执行时间超过10秒
+                if (db.Ado.SqlExecutionTime.TotalSeconds > 10)
+                {
+                    Console.WriteLine(sql);
+                }
+            };
+
+            //SQL报错
+            db.Aop.OnError = (exp) =>
+            {
+                Console.WriteLine(exp.Sql);
+                //exp.sql 这样可以拿到错误SQL            
+            };
+
+            services.AddScoped<ISqlSugarClient>(it => { return db; });
         }
     }
 ```
+
 `Program.cs 依赖注入：`
 ```csharp
 builder.Services.AddSqlsugarSetup();
@@ -139,7 +215,8 @@ public void Test()
 **`缺点：`**
 * 不使用单例模式，SqlSugarScope 一直 new 会存在内存泄露问题
 
-#### 2.2.1 非Asp.NET Core下的完整案例
+
+#### 2.2.1 静态字段案例
 `创建对象：`
 ```csharp
 public class Sugar
@@ -156,6 +233,7 @@ public class Sugar
                 db.Aop.OnLogExecuting = (sql, pars) =>
                  {
                      var queryString = new KeyValuePair<string, SugarParameter[]>(sql, pars);
+                     //ToSqlExplain 在标题6中有完整代码
                      Console.WriteLine(ToSqlExplain.GetSql(queryString));//输出sql
                  };
                 db.Aop.OnLogExecuted = (sql, pars) =>
@@ -179,6 +257,7 @@ public class Sugar
             });
     }
 ```
+
 
 `调用方法一(类调用)：`
 ```csharp
@@ -204,6 +283,146 @@ class Program : Sugar
             Console.ReadLine();
         }
     }
+```
+
+#### 2.2.2 SqlSugar.IOC注入方式案例
+
+`创建对象：`
+```csharp
+//Program.cs中添加如下代码
+
+SugarIocServices.AddSqlSugar(new IocConfig()
+{
+    //ConfigId="db01"  多租户用到
+    ConnectionString = "server=127.0.0.1;Database=ToDoDB;Uid=root;Pwd=root; AllowLoadLocalInfile=true;",
+    DbType = IocDbType.MySql,
+    IsAutoCloseConnection = true//自动释放
+}); //多个库就传List<IocConfig>
+
+//配置参数
+SugarIocServices.ConfigurationSugar(db =>
+{
+    db.Aop.OnLogExecuting = (sql, p) =>
+    {
+        Console.WriteLine(sql);
+    };
+    //设置更多连接参数
+    //db.CurrentConnectionConfig.XXXX=XXXX
+    //db.CurrentConnectionConfig.MoreSettings=new ConnMoreSettings(){}
+    //二级缓存设置
+    //db.CurrentConnectionConfig.ConfigureExternalServices = new ConfigureExternalServices()
+    //{
+    // DataInfoCacheService = myCache //配置我们创建的缓存类
+    //}
+    //读写分离设置
+    //laveConnectionConfigs = new List<SlaveConnectionConfig>(){...}
+
+    /*多租户注意*/
+    //单库是db.CurrentConnectionConfig 
+    //多租户需要db.GetConnection(configId).CurrentConnectionConfig 
+});
+```
+
+
+`调用对象：`
+
+```csharp
+public class TestController : ControllerBase
+{
+    private static readonly SqlSugarScope db = DbScoped.SugarScope;
+    
+    public TestController()
+    {
+    }
+    
+    public JsonResult Test()
+    {
+        var cs = db.Queryable<Student>().ToList();
+        return new JsonResult(cs);
+    }
+}
+```
+
+#### 2.2.3 .NET IOC注入方式案例
+`注意：SqlSugarScope用单例AddSingleton  单例`
+
+`创建对象：`
+```csharp
+public static class SqlsugarSetup
+    {
+        public static void AddSqlsugarSetup(this IServiceCollection services)
+        {
+            SqlSugarScope sqlSugar = new SqlSugarScope(new ConnectionConfig()
+            {
+                DbType = SqlSugar.DbType.MySql,
+                ConnectionString = "server = 127.0.0.1; Database = ToDoDB; Uid = root; Pwd = root; AllowLoadLocalInfile = true;",
+                IsAutoCloseConnection = true,
+            },
+                db =>
+                {
+                    //单例参数配置，所有上下文生效
+                    db.Aop.OnLogExecuting = (sql, pars) =>
+                        {
+                        //Console.WriteLine(sql);//输出sql
+                    };
+                    //每次Sql执行前事件
+                    db.Aop.OnLogExecuting = (sql, pars) =>
+                    {
+                        var queryString = new KeyValuePair<string, SugarParameter[]>(sql, pars);
+                        //ToSqlExplain 在标题6中有完整代码
+                        Console.WriteLine(ToSqlExplain.GetSql(queryString));//输出sql
+                    };
+
+                    //SQL执行完
+                    db.Aop.OnLogExecuted = (sql, pars) =>
+                    {
+                        //执行时间超过1秒
+                        if (db.Ado.SqlExecutionTime.TotalSeconds > 1)
+                        {
+                            //代码CS文件名
+                            var fileName = db.Ado.SqlStackTrace.FirstFileName;
+                            //代码行数
+                            var fileLine = db.Ado.SqlStackTrace.FirstLine;
+                            //方法名
+                            var FirstMethodName = db.Ado.SqlStackTrace.FirstMethodName;
+                            //sql
+                            var exesql = sql;
+                            //参数
+                            var sqlpars = pars;
+                            //db.Ado.SqlStackTrace.MyStackTraceList[1].xxx 获取上层方法的信息
+                        }
+                    };
+
+                    //SQL报错
+                    db.Aop.OnError = (exp) =>
+                    {
+                        Console.WriteLine(exp.Sql);
+                        //exp.sql 这样可以拿到错误SQL            
+                    };
+                });
+            services.AddSingleton<ISqlSugarClient>(sqlSugar);//这边是SqlSugarScope用AddSingleton
+        }
+    }
+```
+
+
+`Program.cs 依赖注入：`
+```csharp
+builder.Services.AddSqlsugarSetup();
+```
+
+`调用对象：`
+```csharp
+private readonly ISqlSugarClient db;
+public ToDoService(ISqlSugarClient _sqlSugarClient)
+{
+    db = _sqlSugarClient;
+}
+
+public void Test()
+{
+    var list = db.Queryable<Student>();
+}
 ```
 
 ## 3.连接参数
@@ -373,58 +592,67 @@ db.CurrentConnectionConfig.MoreSettings = new ConnMoreSettings
 <div id="NavigateDiv">
 <table style="border:none;">
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black;font-size:18px;" > 目录导航 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink);font-size:18px;" > 目录导航 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_1上下文概念" > 1.上下文概念 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_1上下文概念" > 1.上下文概念 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_2创建对象" > 2.创建对象 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_2创建对象" > 2.创建对象 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_21-sqlsugarclient" > &emsp;2.1 SqlSugarClient </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_21-sqlsugarclient" > &emsp;2.1 SqlSugarClient </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_211-非aspnet-core下的完整案例" > &emsp;&emsp;2.1.1 非Asp.NET Core下的完整案例 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_211-静态方法案例" > &emsp;&emsp;2.1.1 静态方法案例 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_212-aspnet-core30以上的完整案例" > &emsp;&emsp;2.1.2 Asp.NET Core3.0以上的完整案例 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_212-sqlsugarioc注入案例" > &emsp;&emsp;2.1.2 SqlSugar.IOC注入案例 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_22-sqlsugarscope" >  &emsp;2.2 SqlSugarScope </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_213-net-ioc注入案例" > &emsp;&emsp;2.1.3 .NET IOC注入案例 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_221-非aspnet-core下的完整案例" > &emsp;&emsp;2.2.1 非Asp.NET Core下的完整案例 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_22-sqlsugarscope" >  &emsp;2.2 SqlSugarScope </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_221-静态字段案例" > &emsp;&emsp;2.2.1 静态字段案例 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_3连接参数" > 3.连接参数 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_222-sqlsugarioc注入案例" > &emsp;&emsp;2.2.2 SqlSugar.IOC注入案例 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_4设置超时时间" > 4.设置超时时间 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_223-net-ioc注入案例" > &emsp;&emsp;2.2.3 .NET IOC注入案例 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_5验证连接是否成功" > 5.验证连接是否成功 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_3连接参数" > 3.连接参数 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_6打印sql" > 6.打印Sql </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_4设置超时时间" > 4.设置超时时间 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_7国际化" > 7.国际化 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_5验证连接是否成功" > 5.验证连接是否成功 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_8长连接、短连接用法" > 8.长连接、短连接用法 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_6打印sql" > 6.打印Sql </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_81-自动释放短连接，推荐这样使用" > &emsp;8.1 自动释放(短连接，推荐这样使用) </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_7国际化" > 7.国际化 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_82-如何使用长连接" > &emsp;8.2 如何使用长连接 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_8长连接、短连接用法" > 8.长连接、短连接用法 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_83-使用场景" > &emsp;8.3 使用场景 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_81-自动释放短连接，推荐这样使用" > &emsp;8.1 自动释放(短连接，推荐这样使用) </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/入门必看?id=_9配置最小时间" > 9.配置最小时间 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_82-如何使用长连接" > &emsp;8.2 如何使用长连接 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_83-使用场景" > &emsp;8.3 使用场景 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/入门必看?id=_9配置最小时间" > 9.配置最小时间 </a></td>
     </tr>
 </table>
 </div>
