--- a/SqlSugar/从零开始/实体配置.md
+++ b/SqlSugar/从零开始/实体配置.md
@@ -210,40 +210,40 @@ var db= new SqlSugarClient(new ConnectionConfig()
 <div id="NavigateDiv">
 <table style="border:none;">
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black;font-size:18px;" > 目录导航 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink);font-size:18px;" > 目录导航 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_1实体使用自带特性" > 1.实体使用自带特性 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_1实体使用自带特性" > 1.实体使用自带特性 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_11-主键自增" > &emsp;1.1 主键自增 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_11-主键自增" > &emsp;1.1 主键自增 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_12-多个主键" > &emsp;1.2 多个主键 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_12-多个主键" > &emsp;1.2 多个主键 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_13-无主键" > &emsp;1.3 无主键 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_13-无主键" > &emsp;1.3 无主键 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_2实体使用自定义特性" > 2.实体使用自定义特性 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_2实体使用自定义特性" > 2.实体使用自定义特性 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_21-创建特性的类" >  &emsp;2.1 创建特性的类 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_21-创建特性的类" >  &emsp;2.1 创建特性的类 </a></td>
     </tr>
      <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_22-创建带自定义特性的实体类" > &emsp;2.2 创建带自定义特性的实体类 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_22-创建带自定义特性的实体类" > &emsp;2.2 创建带自定义特性的实体类 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_23在创建sqlsugarclient对象中添加代码" > &emsp;2.3在创建SqlSugarClient对象中添加代码 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_23在创建sqlsugarclient对象中添加代码" > &emsp;2.3在创建SqlSugarClient对象中添加代码 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_24添加创建表的代码，查看效果" > &emsp;2.4添加创建表的代码，查看效果 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_24添加创建表的代码，查看效果" > &emsp;2.4添加创建表的代码，查看效果 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_3实体不使用特性" > 3.实体不使用特性 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_3实体不使用特性" > 3.实体不使用特性 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_4特性明细" > 4.特性明细 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/实体配置?id=_4特性明细" > 4.特性明细 </a></td>
     </tr>
 </table>
 </div>
