--- a/SqlSugar/从零开始/项目安装.md
+++ b/SqlSugar/从零开始/项目安装.md
@@ -35,19 +35,19 @@
 <div id="NavigateDiv">
 <table style="border:none;">
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black;font-size:18px;" > 目录导航 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink);font-size:18px;" > 目录导航 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_1使用nuget" > 1.使用Nuget </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/项目安装?id=_1使用nuget" > 1.使用Nuget </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_2安装" > 2.安装 </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/项目安装?id=_2安装" > 2.安装 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_21-安装-sqlsugar" > &emsp;2.1 安装 SqlSugar </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/项目安装?id=_21-安装-sqlsugar" > &emsp;2.1 安装 SqlSugar </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_22-安装-sqlsugarcore" > &emsp;2.2 安装 SqlSugarCore </a></td>
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/项目安装?id=_22-安装-sqlsugarcore" > &emsp;2.2 安装 SqlSugarCore </a></td>
     </tr>
 </table>
 </div>
