--- a/SqlSugar/从零开始/入门必看.md
+++ b/SqlSugar/从零开始/入门必看.md
@@ -82,7 +82,7 @@ static void Main(string[] args)
 }
 ```
 
-#### 2.1.2 SqlSugar.IOC注入方式案例
+#### 2.1.2 SqlSugar.IOC注入案例
 `创建对象：`
 ```csharp
 //Program.cs中添加如下代码
@@ -140,7 +140,7 @@ public class TestController : ControllerBase
 ```
 
 
-#### 2.1.3 .NET IOC注入方式案例
+#### 2.1.3 .NET IOC注入案例
 `注意：SqlSugarClient用 AddScoped  每次请求一个实例`
 
 `创建对象：`
@@ -285,7 +285,7 @@ class Program : Sugar
     }
 ```
 
-#### 2.2.2 SqlSugar.IOC注入方式案例
+#### 2.2.2 SqlSugar.IOC注入案例
 
 `创建对象：`
 ```csharp
@@ -343,7 +343,7 @@ public class TestController : ControllerBase
 }
 ```
 
-#### 2.2.3 .NET IOC注入方式案例
+#### 2.2.3 .NET IOC注入案例
 `注意：SqlSugarScope用单例AddSingleton  单例`
 
 `创建对象：`
