新增 源码学习，修改配置 文档

--- a/SqlSugar/从零开始/修改配置.md
+++ b/SqlSugar/从零开始/修改配置.md
@@ -1,1 +1,99 @@
-修改配置.md
+!> 说明：创建对象时，连接参数： **MoreSettings**
+
+
+## 1.使用案例
+
+目前已知的属性和字段
+
+```csharp
+public class ConnMoreSettings
+    {
+        public bool PgSqlIsAutoToLower;
+
+        public ConnMoreSettings();
+
+        public bool IsAutoRemoveDataCache { get; set; }
+        public bool IsWithNoLockQuery { get; set; }
+        public bool DisableNvarchar { get; set; }
+        public bool DisableMillisecond { get; set; }
+        public int DefaultCacheDurationInSeconds { get; set; }
+        public bool? TableEnumIsString { get; set; }
+        public DateTime? DbMinDate { get; set; }
+    }
+```
+
+### 1.1 案例一
+
+```csharp
+public static SqlSugarClient GetInstance()
+{
+    SqlSugarClient db = new SqlSugarClient(new ConnectionConfig()
+    {
+        DbType = SqlSugar.DbType.MySql,
+        ConnectionString = "server = 127.0.0.1; Database = sugarlearn; Uid = root; Pwd = root; AllowLoadLocalInfile = true;",
+        InitKeyType = InitKeyType.Attribute,
+        IsAutoCloseConnection = true,
+        //看这里
+        MoreSettings=new ConnMoreSettings()
+        {
+            DisableNvarchar = true, 
+            DbMinDate = DateTime.MinValue
+        }
+    });
+}
+```
+
+### 1.2 案例二
+
+```csharp
+public static SqlSugarClient GetInstance()
+{
+    SqlSugarClient db = new SqlSugarClient(new ConnectionConfig()
+    {
+        DbType = SqlSugar.DbType.MySql,
+        ConnectionString = "server = 127.0.0.1; Database = sugarlearn; Uid = root; Pwd = root; AllowLoadLocalInfile = true;",
+        InitKeyType = InitKeyType.Attribute,
+        IsAutoCloseConnection = true
+    });
+
+     //看这里
+    db.CurrentConnectionConfig.MoreSettings = new ConnMoreSettings()
+    {
+        DisableNvarchar = true, 
+        DbMinDate = DateTime.MinValue
+    };
+}
+```
+
+
+## 2.使用过程中不允许修改的参数
+* DbType  数据库类型
+* ConnectionString  连接字符串
+* ConfigId 多租户唯一标识
+
+**其他参数都可以在使用的过程中随意更改**
+
+
+
+[📄文档参考：修改配置](https://www.donet5.com/home/Doc?typeId=2350)
+
+
+<div id="NavigateDiv">
+<table style="border:none;">
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink);font-size:18px;" > 目录导航 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/修改配置?id=_1使用案例" > 1.使用案例 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/修改配置?id=_11-案例一" >  &emsp;1.1 案例一 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/修改配置?id=_12-案例二" > &emsp;1.2 案例二 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/从零开始/修改配置?id=_2使用过程中不允许修改的参数" > &emsp;2.使用过程中不允许修改的参数 </a></td>
+    </tr>
+</table>
+</div>
