查询目录 页面

--- a/SqlSugar/数据查询.md
+++ b/SqlSugar/数据查询.md
@@ -1,3 +1,58 @@
 # 数据查询
 
-> 前言
+<table style="border:none;">
+<tbody>
+<!-- 每个a标签后追加 target="_blank"  实现点击后打开一个新的页面 -->
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/查询目录" >查询目录 </a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/基础查询" >基础查询</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/分页查询" >分页查询</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/分组去重" >分组去重</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/排序用法" >排序用法</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/联表查询" >联表查询</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/导航查询" >导航查询</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/子查询" >子查询</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/嵌套查询" >嵌套查询</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/配置查询" >配置查询</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/并集查询" >并集查询</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/树型查询" >树型查询</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/无实体查询" >无实体查询</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/动态表达式" >动态表达式</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/表格查询" >表格查询</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/异步查询" >异步查询</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/查询函数" >查询函数</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/过滤器" >过滤器</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/扩展函数" >扩展函数</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/跨库查询" >跨库查询</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/报表查询" >报表查询</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/生命周期" >生命周期</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/Where" >Where</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/Select" >Select</a></td>
+</tr>
+<tr style="border:none;">
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/数据查询/执行查询" >执行查询</a></td>
+</tr>
+</tbody>
+</table>
