--- a/SqlSugar/数据查询/查询目录.md
+++ b/SqlSugar/数据查询/查询目录.md
@@ -1,1 +1,95 @@
-查询目录.md
+!> **说明**：等数据查询所有文档都写完，再回头来完善表格中路径的跳转
+
+## 1.基础查询
+
+| 名称 | 描述 | 路由跳转 |
+| --- | --- | :---: | 
+基础查询  | 查询单条、主键查询、查所有、模糊查询、排序、TOP 、Count、查单条、IN等等操作 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+分页查询 | 分页查询 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+分组查询 | 分组查询和去重复  Group by   Distinct | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+排序  | Order by  、随机排序、动态排序 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+
+
+## 2.多表查询
+
+| 名称 | 描述 | 路由跳转 |
+| --- | --- | :---: | 
+联表查询  | 使用Left Join  Inner Join进行查询 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+配置查询 | 简化联表操作，解决字典联表和简单Name联表问题 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+子查询 | 子查询 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+嵌套查询  | 嵌套联表查询、多合一嵌套、一合一嵌套 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+导航查询 | 一对多 、一对一、多对多操作 ，有层级的查询 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+并集查询 | Union all | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+树型查询 | 查询出一个树形结构，比如菜单 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+
+
+## 3.业务查询
+
+| 名称 | 描述 | 路由跳转 |
+| --- | --- | :---: | 
+无实体查询  | 没有实体查询 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+表格查询 | 前端组装好查询条件，后台直接使用 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+全局过滤器 | 比如很多地方用到假删除，那么我们可以配置加上IsDeleted | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+多库查询  | 如果表结构一样，那我们可以用一个实体操作不同表 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+
+
+## 4.高级功能
+
+| 名称 | 描述 | 路由跳转 |
+| --- | --- | :---: | 
+二级缓存  | 支持Redis等缓存，让你不需要维护 CacheKey轻松使用缓存来提高服务器性能 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+异步查询 | 使用异步进行查询 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+Sqlfun函数 | 使用SqlSugar自带的数据库函数查询 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+扩展Sql函数 | 当有些ORM不能解析的功能，可以自已封装SQL函数 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+动态表达式 | 动态创建表达式，解析表达式成SQL | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+报表查询 | 集合和表的Join , 报表统计 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+
+
+## 5.Queryable
+
+| 名称 | 描述 | 路由跳转 |
+| --- | --- | :---: | 
+Select用法  | 一列、多列、匿名对象、多表映射等 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+Where用法 | 表达式、拼表达式、Sql、动态条件 等 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+生命周期 | 原理、引用类型、拷贝机制 | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+执行查询 | ToList  First  ToDateTable ToJson ToTree ToParentList ToSql  ToPivotList ToPivotTable<br> ToClassString  ToDictionary   ToDictionaryList   Count   Any  Sum<br> Max Min | <a href="/#/SqlSugar/从零开始/项目安装" >查看 </a> | 
+
+
+[📄文档参考：查询目录](https://www.donet5.com/home/Doc?typeId=2308)
+
+
+<!-- <style type="text/css">
+    a{
+    }
+</style> -->
+
+<!-- 移除a标签所有样式 -->
+<!-- <script type="text/javascript">
+    $(function(){
+        $(a).removeAttr(attribute);
+    });
+</script> -->
+
+<div id="NavigateDiv">
+<table style="border:none;">
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink);font-size:18px;" > 目录导航 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/查询目录?id=_1基础查询" > 1.基础查询 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/查询目录?id=_2多表查询" > 2.多表查询 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/查询目录?id=_3业务查询" > 3.业务查询 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/查询目录?id=_4高级功能" > 4.高级功能 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:var(--sidebarSublink)" href="/#/SqlSugar/数据查询/查询目录?id=_5queryable" > 5.Queryable </a></td>
+    </tr>
+</table>
+</div>
+
