添加SyncFusion的笔记框架

--- a/SqlSugar/从零开始/实体配置.md
+++ b/SqlSugar/从零开始/实体配置.md
@@ -187,7 +187,7 @@ var db= new SqlSugarClient(new ConnectionConfig()
 | OracleSequenceName | 设置Oracle序列，设置后该列等同于自增列 |
 | ColumnDescription | 备注 |
 | Length | 长度 |
-| IsNullable | 是否可以为Null；默认False |
+| IsNullable | 是否可以为Null；默认False(允许为NULL)  |
 | DecimalDigits | 精度；decimal(18,2),Length=19,DecimalDigits=2 |
 | OldColumnName | 修改列名用，这样不会新增或删除列 |
 | IsDisabledDelete | 禁止删除列 |
