--- a/SqlSugar/从零开始/项目安装.md
+++ b/SqlSugar/从零开始/项目安装.md
@@ -17,6 +17,7 @@
 
 
 ## 2.安装
+分为.NET FrameWork 和 .NET Core
 ### 2.1 安装 SqlSugar
 * SqlSugar
 * MySql.Data(MySql数据库驱动)
@@ -25,7 +26,6 @@
 
 ### 2.2 安装 SqlSugarCore
 * SqlSugarCore
-
 
 
 
